<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".main.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/layout_margin"
        android:paddingVertical="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ib_favorites"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favorites"
                android:src="@drawable/ic_bookmarks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_header_1"
                style="@style/TextView.Header.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_home_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_header_2"
                style="@style/TextView.Header.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_home_2"
                android:textColor="@color/green"
                app:layout_constraintStart_toStartOf="@+id/tv_header_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/blue_transparent"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:contentPadding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_2">

                <TextView
                    style="@style/TextView.Hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_search" />
            </androidx.cardview.widget.CardView>

            <com.ariefzuhri.gizee.core.ui.customview.nestedscrollablehost.NestedScrollableHost
                android:id="@+id/nsh_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_history">

                <EditText
                    android:id="@+id/edt_search"
                    style="@style/EditText.MultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/autofill_query"
                    android:hint="@string/hint_search" />
            </com.ariefzuhri.gizee.core.ui.customview.nestedscrollablehost.NestedScrollableHost>

            <Button
                android:id="@+id/btn_search"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/calculate_foods"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nsh_search" />

            <TextView
                android:id="@+id/tv_history"
                style="@style/TextView.Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/history"
                app:drawableEndCompat="@drawable/ic_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_help" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_main"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/illustration_home" />
        </FrameLayout>
    </RelativeLayout>
</ScrollView>